// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`abis wasm bindings computes a contract address 1`] = `
AztecAddress {
  "buffer": {
    "data": [
      39,
      161,
      170,
      28,
      81,
      154,
      13,
      101,
      59,
      124,
      144,
      75,
      148,
      134,
      178,
      166,
      168,
      5,
      185,
      75,
      140,
      68,
      204,
      24,
      163,
      51,
      0,
      45,
      101,
      82,
      170,
      143,
    ],
    "type": "Buffer",
  },
}
`;

exports[`abis wasm bindings computes a function leaf 1`] = `
Fr {
  "value": 16255853943620434246084547000263971056928483888227499632732320436242372959484n,
}
`;

exports[`abis wasm bindings computes a function selector 1`] = `
{
  "data": [
    169,
    5,
    156,
    187,
    42,
    176,
    158,
    178,
    25,
    88,
    63,
    74,
    89,
    165,
    208,
    98,
    58,
    222,
    52,
    109,
    150,
    43,
    205,
    78,
    70,
    177,
    29,
    160,
    71,
    201,
    4,
  ],
  "type": "Buffer",
}
`;

exports[`abis wasm bindings computes contract leaf 1`] = `
Fr {
  "value": 13761632275218847273520262751574664149269181891159611676226614084913136324343n,
}
`;

exports[`abis wasm bindings computes function tree root 1`] = `
Fr {
  "value": 16319202199654239754527012669017244744502052867589428662551071235519303124675n,
}
`;

exports[`abis wasm bindings hash constructor info 1`] = `
{
  "data": [
    33,
    79,
    48,
    128,
    228,
    0,
    77,
    227,
    224,
    187,
    234,
    166,
    162,
    215,
    250,
    187,
    135,
    156,
    67,
    135,
    234,
    67,
    223,
    239,
    172,
    228,
    95,
    105,
    107,
    101,
    207,
    241,
  ],
  "type": "Buffer",
}
`;

exports[`abis wasm bindings hashes VK 1`] = `
Object {
  "data": Array [
    3,
    215,
    112,
    230,
    112,
    168,
    8,
    190,
    95,
    206,
    52,
    172,
    46,
    85,
    55,
    190,
    134,
    187,
    169,
    57,
    109,
    253,
    250,
    109,
    224,
    150,
    49,
    156,
    32,
    17,
    205,
    37,
  ],
  "type": "Buffer",
}
`;

exports[`abis wasm bindings hashes a tx request 1`] = `
{
  "data": [
    13,
    190,
    226,
    203,
    10,
    204,
    39,
    84,
    100,
    192,
    162,
    67,
    136,
    181,
    14,
    129,
    247,
    2,
    200,
    119,
    238,
    121,
    125,
    98,
    82,
    60,
    23,
    238,
    206,
    4,
    213,
    200,
  ],
  "type": "Buffer",
}
`;
